--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>站长素材</title>
+<title>威师的网站</title>
 <link rel="stylesheet" href="css/style.css" >
 <link rel="stylesheet" href="css/jquery.bxslider.css" >
 <link rel="stylesheet" href="css/reset.css">
@@ -36,7 +36,7 @@
     <div class="top_daohang" >
 		<ul id="jsddm">
         	<li class="top_dh"><a href="#">首页</a></li>
-            <li class="top_dh"><a href="gywm.html">关于我们</a>
+            <li class="top_dh"><a href="gywm.html">关于陈威</a>
            		 <ul>
                 	<li><a href="#">公司简介</a></li>
                     <li><a href="#">品牌文化</a></li>
@@ -104,66 +104,66 @@
             	<ul>
                 	<li class="xw_Name">新闻动态<span class="xw_gd">Learn More >></span></li>   	
                          
-                    <li class="xw_liebiao" onmouseover="javascript:blurtitle(this)" id="title0"><a href="">建国60周年工程机械行业成就</a><span>2013.11.21</span></li>
+                    <li class="xw_liebiao" onmouseover="javascript:blurtitle(this)" id="title0"><a href="">威师的模板</a><span>2013.11.21</span></li>
                             <li class="xw_images" id="content0" style="display:block">
                                     <span class="xw_span"><img src="images/xw.png" /></span>
                                     <span class="xw_neirong">
                                         <div class="xw_no1">
                                             <ul>
-                                                <li class="cw_abcName">建国60周年工程机械行业成就</li>
-                                                <li class="cw_abcnoct">年工程机械行业是我国装备制造业的重要的组成部分...</li>
+                                                <li class="cw_abcName">威师的模板</li>
+                                                <li class="cw_abcnoct">威师的模板...</li>
                                                 <li class="cw_gengduo">Learn More >></li>  
                                             </ul>
                                         </div>       	
                                     </span>
                             </li>
-                    <li class="xw_liebiao" onmouseover="javascript:blurtitle(this)" id="title1"><a href="">建国60周年工程机械行业成就</a><span>2013.10.28</span></li>
+                    <li class="xw_liebiao" onmouseover="javascript:blurtitle(this)" id="title1"><a href="">威师的模板</a><span>2013.10.28</span></li>
                   			  <li class="xw_images" id="content1" style="display:none">
                                     <span class="xw_span"><img src="images/xw.png" /></span>
                                     <span class="xw_neirong">
                                         <div class="xw_no1">
                                             <ul>
-                                                <li class="cw_abcName">建国60周年工程机械行业成就</li>
-                                                <li class="cw_abcnoct">年工程机械行业是我国装备制造业的重要的组成部分...</li>
+                                                <li class="cw_abcName">威师的模板</li>
+                                                <li class="cw_abcnoct">威师的模板...</li>
                                                 <li class="cw_gengduo">Learn More >></li>  
                                             </ul>
                                         </div>       	
                                     </span>
                             </li>
-                    <li class="xw_liebiao" onmouseover="javascript:blurtitle(this)" id="title2"><a href="">建国60周年工程机械行业成就</a><span>2013.9.10</span></li>
+                    <li class="xw_liebiao" onmouseover="javascript:blurtitle(this)" id="title2"><a href="">威师的模板</a><span>2013.9.10</span></li>
 								<li class="xw_images" id="content2" style="display:none">
                                     <span class="xw_span"><img src="images/xw.png" /></span>
                                     <span class="xw_neirong">
                                         <div class="xw_no1">
                                             <ul>
-                                                <li class="cw_abcName">建国60周年工程机械行业成就</li>
-                                                <li class="cw_abcnoct">年工程机械行业是我国装备制造业的重要的组成部分...</li>
+                                                <li class="cw_abcName">威师的模板</li>
+                                                <li class="cw_abcnoct">威师的模板...</li>
                                                 <li class="cw_gengduo">Learn More >></li>  
                                             </ul>
                                         </div>       	
                                     </span>
                             </li>
-                	<li class="xw_liebiao" onmouseover="javascript:blurtitle(this)" id="title3"><a href="">建国60周年工程机械行业成就</a><span>2013.4.8</span></li>
+                	<li class="xw_liebiao" onmouseover="javascript:blurtitle(this)" id="title3"><a href="">威师的模板</a><span>2013.4.8</span></li>
                    			<li class="xw_images" id="content3" style="display:none">
                                     <span class="xw_span"><img src="images/xw.png" /></span>
                                     <span class="xw_neirong">
                                         <div class="xw_no1">
                                             <ul>
-                                                <li class="cw_abcName">建国60周年工程机械行业成就</li>
-                                                <li class="cw_abcnoct">年工程机械行业是我国装备制造业的重要的组成部分...</li>
+                                                <li class="cw_abcName">威师的模板</li>
+                                                <li class="cw_abcnoct">威师的模板...</li>
                                                 <li class="cw_gengduo">Learn More >></li>  
                                             </ul>
                                         </div>       	
                                     </span>
                             </li>
-					<li class="xw_liebiao" onmouseover="javascript:blurtitle(this)" id="title4"><a href="">建国60周年工程机械行业成就</a><span>2013.3.12</span></li>
+					<li class="xw_liebiao" onmouseover="javascript:blurtitle(this)" id="title4"><a href="">威师的模板</a><span>2013.3.12</span></li>
                     		  <li class="xw_images" id="content4" style="display:none">
                                     <span class="xw_span"><img src="images/xw.png" /></span>
                                     <span class="xw_neirong">
                                         <div class="xw_no1">
                                             <ul>
-                                                <li class="cw_abcName">建国60周年工程机械行业成就</li>
-                                                <li class="cw_abcnoct">年工程机械行业是我国装备制造业的重要的组成部分...</li>
+                                                <li class="cw_abcName">威师的模板</li>
+                                                <li class="cw_abcnoct">威师的模板...</li>
                                                 <li class="cw_gengduo">Learn More >></li>  
                                             </ul>
                                         </div>       	
@@ -182,8 +182,8 @@
                             <li>
 								<div class="cp_name">
                                 	<ul>
-                                    	<li class="cp_abcName">CE650-6 液压挖掘机</li>
-                                        <li class="cp_abcnoct">年工程机械行业是我国装备制造业的重要的组械行业是我国装备制造业的重械行业是我国部分年工程机械行业是业是我国装备制造我国装备制造业的重要的组成部分.....</li>
+                                    	<li class="cp_abcName">威师简介</li>
+                                        <li class="cp_abcnoct">姓名：陈威；籍贯：四川荥经；性别：男；.....</li>
                                         <li class="cp_gengduo">Learn More >></li>
                                     </ul>
                                 </div>
@@ -197,8 +197,8 @@
                             <li>
 								<div class="cp_name">
                                 	<ul>
-                                    	<li class="cp_abcName">梅花抓料机</li>
-                                        <li class="cp_abcnoct">年工程机械行业是我国装备制造业的重要的组械行业年工程机械行业是我国装备制造业的重要的组械行业年工程机械行业是我国装备制造业的重要的组械行业.....</li>
+                                    	<li class="cp_abcName">威师简介</li>
+                                        <li class="cp_abcnoct">高中就读于荥经县第一学府.....</li>
                                         <li class="cp_gengduo">Learn More >></li>
                                     </ul>
                                 </div>
@@ -212,8 +212,8 @@
                             <li>
 								<div class="cp_name">
                                 	<ul>
-                                    	<li class="cp_abcName"> 特种产品</li>
-                                        <li class="cp_abcnoct">年工程机械行业是我国装备制造业的重要的组械行业年工程机械行业是我国装备制造业的重要的组械行业年工程机械行业是我国装备制造业的重要的组械行业.....</li>
+                                    	<li class="cp_abcName"> 威师简介</li>
+                                        <li class="cp_abcnoct">喜欢抽烟、喝酒、烫头.....</li>
                                         <li class="cp_gengduo">Learn More >></li>
                                     </ul>
                                 </div>
@@ -224,9 +224,9 @@
                     <li class="cp_lrixin">
                     	<div class="cp_neixin">
                         	<ul>
-                            	<li><a href="/" onMouseMove="toggle('1')">履带式挖掘机</a></li>
-                                <li><a href="/" onMouseMove="toggle('2')">梅花抓料机</a></li>
-                                <li><a href="/" onMouseMove="toggle('3')">特种产品</a></li>
+                            	<li><a href="/" onMouseMove="toggle('1')">工地1</a></li>
+                                <li><a href="/" onMouseMove="toggle('2')">工地2</a></li>
+                                <li><a href="/" onMouseMove="toggle('3')">工地3</a></li>
                             </ul>
                         </div>
                     </li>
